# pySEs

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-mpi.txt  requirements.txt  setup.py
docs/: generate_api.sh  requirements.txt
docs/source/: codebase_structure.rst  conf.py  generate_docs.py  index.rst  installation_and_validation.rst  model_run_quickstart.rst
pysces/: config.py  horizontal_grid.py  initialization.py  model_info.py  run_dycore.py
pysces/dynamical_cores/: hyperviscosity.py  mass_coordinate.py  model_config.py  model_state.py  operators_3d.py  physics_config.py  time_stepping.py  utils_3d.py  vertical_remap.py
pysces/mesh_generation/: element_local_metric.py  equiangular_metric.py  mesh.py  mesh_io.py  spherical_coord_utils.py
pysces/mpi/: processor_decomposition.py
pysces/operations_2d/: limiters.py  local_assembly.py  tensor_hyperviscosity.py
pysces/shallow_water_models/: galewsky_init.py  hyperviscosity.py  model_state.py  run_shallow_water.py  time_stepping.py  tracers.py  williamson_init.py
pysces/tracer_transport/: eulerian_spectral.py
pyses/: grids.py  initialize.py  model_utils.py  shallow_water.py  simulate.py
pyses/analytic_initialization/: hydrostatic_solid_body.py
pyses/dynamical_cores/: model_config.py  run_dycore.py  time_stepping.py  utils_3d.py
pyses/mesh_generation/: cubed_sphere.py  equiangular_metric.py  mesh_io.py  periodic_plane.py  spherical_coord_utils.py
pyses/mpi/: global_assembly.py  processor_decomposition.py
pyses/operations_2d/: horizontal_grid.py  limiters.py  local_assembly.py  operators.py
pyses/pysces.egg-info/: SOURCES.txt  requires.txt
pyses/shallow_water_models/: explicit_terms.py  galewsky_init.py  hyperviscosity.py  model_state.py  run_shallow_water.py  tracers.py  williamson_init.py
pyses/tracer_transport/: eulerian_spectral.py
src/: _config.py  config.py  grids.py  initialize.py  model_utils.py  shallow_water.py  simulate.py
src/analytic_initialization/: moist_baroclinic_wave.py
src/dynamical_cores/: hyperviscosity.py  initialization.py  mass_coordinate.py  model_state.py  operators_3d.py  physics_config.py  run_dycore.py  time_stepping.py  utils_3d.py  vertical_remap.py
src/mesh_generation/: element_local_metric.py  equiangular_metric.py  mesh.py  mesh_definitions.py  mesh_io.py  periodic_plane.py  spectral.py
src/mpi/: global_assembly.py  global_communication.py
tests/: context.py  test_spectral.py
(+188 files in other folders)
