[project]
name = "pyses"
version = "0.0.2"
description = "A highly readable, well documented, well tested set of atmospheric dynamical cores with support for variable resolution meshes, as well as automatic differentiation for machine learning and data assimilation."
readme = "README.md"
authors = [{ name = "Owen Hughes", email = "okayhughes@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "frozendict>=2.4.7",
    "numpy>=2.2.6",
    "jax>=0.6.2",
    "setuptools>=80.9.0",
    "jaxlib>=0.6.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
license = "LGPL-2.1-or-later"
license-files = [
    "LICENSE",
]
[project.optional-dependencies]
mpi = [
    "mpi4py>=4.1.1",
    "mpi4jax>=0.8.1.post2",
]
[project.urls]
Homepage = "https://pyses.org"
Repository = "https://github.com/OkayHughes/pySEs"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
    "flake8>=7.3.0",
    "matplotlib>=3.10.7",
    "pytest>=9.0.2",
]
doc = [
    "numpydoc>=1.10.0",
    "sphinx>=8.1.3",
]

[tool.setuptools.packages.find]
include = ["pyses*"]  # ["*"] by default
